--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,14 @@ workflows:
           branches:
             ignore:
               - master
+  latest:
+    jobs:
+    - build-n-push-latest:
+        context: org-global
+        filters:
+          branches:
+            only:
+              - master
 
 jobs:
  build-all:
@@ -14,3 +22,10 @@ jobs:
    steps:
      - checkout
      - run: make build-all
+ build-n-push-latest:
+   machine: true
+   steps:
+     - checkout
+     - run: make latest-build
+     - run: docker login ${DOCKER_REGISTRY} -u ${DOCKER_USERNAME} -p ${DOCKER_PASSWORD}
+     - run: make latest-push
