feat: add CIRCLE_CI tag to release job

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,6 +41,6 @@ jobs:
     machine: true
     steps:
     - checkout
-    - run: make release-build
+    - run: TAG=${CIRCLE_TAG:-master} make release-build
     - run: docker login ${DOCKER_REGISTRY} -u ${DOCKER_USERNAME} -p ${DOCKER_PASSWORD}
-    - run: make release-push
+    - run: TAG=${CIRCLE_TAG:-master} make release-push
